# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-07-07 Michael Truog   <mjtruog at protonmail dot com>

    * Fix Javascript CloudI API termination by closing its socket
    * Fix Javascript CloudI API version check for compatibility

2018-07-06 Michael Truog   <mjtruog at protonmail dot com>

    * Add the TIMEOUT_TERMINATE_EXTERNAL macro to reduce the
      timeout_terminate value used in the OS processes of
      external service threads, to allow time for sending SIGKILL
      while avoiding the potential for the service monitor
      to kill the external service Erlang process
    * Fix how cloudi_service_api_requests turns an internal
      service's arguments into a JSON string so it matches
      the JSON input of an internal service
    * Change the service monitor to not wait for the termination
      of service processes when a service is forced to shutdown
    * In the service monitor, use the time of the beginning of the
      termination to more accurately enforce the timeout_terminate

2018-07-05 Michael Truog   <mjtruog at protonmail dot com>

    * Improve (internal cloudi_core) message names and function names
      related to CloudI service initialization and termination

2018-06-26 Michael Truog   <mjtruog at protonmail dot com>

    * Add delay for cloudi_service_map_reduce info messages
      that occur before initialization is complete
    * Add service_ids list to CloudI Service API code_status
      response within the runtime_changes data

2018-06-25 Michael Truog   <mjtruog at protonmail dot com>

    * Add the CloudI Service API function code_status to
      provide build and runtime information
      (including service files that have changed since startup)
    * Fix CloudI Service API tests to rely on
      cloudi_service_api_requests providing JSON-RPC with
      JSON data instead of Erlang terms
    * Update jsonrpclib (now Python 3 is supported)